--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,6 +10,8 @@
     <ui:param name="pageTitle" value="Home" />
     <ui:param name="pageSubtitle" value="Welcome" />
     <ui:define name="body">
+        hello world
+        #{twitterAuthController.users.get(0).username}
     </ui:define>
 
 </ui:composition>
